# clei2025-llm

./: 404.html  CONTRIBUTORS.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
__init__/: index.html
dia1/clases/: index.html
dia1/notebooks/: dataset.json
dia1/notebooks/chat_model/: index.html
dia1/notebooks/langchain-tool-call/: index.html
dia1/notebooks/rag_langchain/: index.html
dia1/notebooks/structured-outputs/: index.html
dia2/clases/: index.html
dia2/notebooks/agentic-rag/: index.html
dia2/notebooks/langchain-tool-call/: index.html
dia2/notebooks/langchain_multi_agent_collaboration/: index.html
dia2/notebooks/react-web-search/: index.html
dia2/notebooks/web-search/: index.html
dia3/clases/: index.html
dia3/notebooks/docrag_client/: index.html
dia3/notebooks/docrag_server/: index.html
dia3/notebooks/ingest/: index.html
dia3/notebooks/langchain_agent/: index.html
dia3/notebooks/langgraph-interrupt/: index.html
dia3/notebooks/mcp_rag/: index.html
dia3/notebooks/reflection/: index.html
dia3/notebooks/sql-agent/: index.html
docs/: index.md
docs/dia1/: clases.md
docs/dia1/notebooks/: chat_model.ipynb  langchain-tool-call.ipynb  rag_langchain.ipynb  structured-outputs.ipynb
docs/dia2/: clases.md
docs/dia2/notebooks/: agentic-rag.ipynb  langchain-tool-call.ipynb  langchain_multi_agent_collaboration.ipynb  react-web-search.ipynb  web-search.ipynb
docs/dia3/: clases.md
docs/dia3/notebooks/: docrag_client.py  docrag_server.py  ingest.py  mcp_rag.ipynb  (+4 more)
search/: search_index.json
